
syntax = "proto3";

package core;

option go_package = "gitlab.com/ondrej.smola/ctcgrpc/pkg/api";


message GetRequest {
  string key = 1;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message GetResponse{
  string value = 1;
}

message DeleteRequest{
  string key = 1;
}

message PutResponse {
}

message DeleteResponse {
}

service Api {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Put (PutRequest) returns (PutResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}
